--- a/app/globals.css
+++ b/app/globals.css
@@ -289,3 +289,15 @@ html {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+.menu-slide-in {
+  transform: translateX(0);
+  transition: transform 500ms ease-in-out;
+  will-change: transform;
+}
+
+.menu-slide-out {
+  transform: translateX(-100%);
+  transition: transform 500ms ease-in-out;
+  will-change: transform;
+}
